// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Theme=refresh-toolbar, Size=desktop contract with split panel (trigger is hidden) 1`] = `
Map {
  "AppLayoutToolbarImplementation" => {
    "appLayoutInternals": {
      "activeAiDrawer": null,
      "activeAiDrawerId": null,
      "activeAiDrawerSize": 0,
      "activeDrawer": undefined,
      "activeDrawerSize": 290,
      "activeGlobalDrawers": [],
      "activeGlobalDrawersIds": [],
      "activeGlobalDrawersSizes": {},
      "aiDrawer": null,
      "aiDrawerFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setFocus": [Function],
      },
      "ariaLabels": {
        "drawers": undefined,
        "drawersOverflow": undefined,
        "drawersOverflowWithBadge": undefined,
        "navigation": undefined,
        "navigationClose": undefined,
        "navigationToggle": undefined,
        "notifications": undefined,
        "tools": undefined,
        "toolsClose": undefined,
        "toolsToggle": undefined,
      },
      "breadcrumbs": undefined,
      "discoveredBreadcrumbs": null,
      "drawers": [
        {
          "ariaLabels": {
            "closeButton": undefined,
            "drawerName": "",
            "triggerButton": undefined,
          },
          "content": undefined,
          "id": "awsui-internal-tools",
          "resizable": false,
          "trigger": {
            "iconName": "status-info",
          },
        },
      ],
      "drawersFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setFocus": [Function],
      },
      "drawersOpenQueue": [],
      "expandedDrawerId": null,
      "globalDrawers": [],
      "globalDrawersFocusControl": {
        "loseFocus": [Function],
        "refs": {},
        "setFocus": [Function],
      },
      "headerVariant": undefined,
      "isMobile": false,
      "maxAiDrawerSize": Infinity,
      "maxDrawerSize": Infinity,
      "maxGlobalDrawersSizes": {},
      "minAiDrawerSize": 400,
      "minDrawerSize": 290,
      "minGlobalDrawersSizes": {},
      "navigation": <React.Fragment />,
      "navigationFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setFocus": [Function],
      },
      "navigationOpen": true,
      "onActiveAiDrawerChange": [Function],
      "onActiveAiDrawerResize": [Function],
      "onActiveDrawerChange": [Function],
      "onActiveDrawerResize": [Function],
      "onActiveGlobalDrawersChange": [Function],
      "onNavigationToggle": [Function],
      "onSplitPanelToggle": [Function],
      "placement": {
        "inlineSize": Infinity,
        "insetBlockEnd": 0,
        "insetBlockStart": 0,
        "insetInlineEnd": 0,
        "insetInlineStart": 0,
      },
      "setExpandedDrawerId": [Function],
      "setNotificationsHeight": [Function],
      "setToolbarHeight": [Function],
      "setToolbarState": [Function],
      "splitPanelAnimationDisabled": true,
      "splitPanelControlId": "split-panel7",
      "splitPanelFocusControl": {
        "refs": {
          "preferences": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setLastInteraction": [Function],
      },
      "splitPanelOpen": false,
      "splitPanelPosition": "bottom",
      "splitPanelToggleConfig": {
        "ariaLabel": undefined,
        "displayed": false,
      },
      "stickyNotifications": false,
      "toolbarState": "show",
      "verticalOffsets": {
        "drawers": 0,
        "header": 0,
        "notifications": 0,
        "toolbar": 0,
      },
    },
    "featureNotificationsProps": {
      "drawer": null,
      "renderLatestFeaturePrompt": [Function],
    },
    "toolbarProps": {
      "activeDrawerId": null,
      "ariaLabels": {
        "drawers": undefined,
        "drawersOverflow": undefined,
        "drawersOverflowWithBadge": undefined,
        "navigation": undefined,
        "navigationClose": undefined,
        "navigationToggle": undefined,
        "notifications": undefined,
        "tools": undefined,
        "toolsClose": undefined,
        "toolsToggle": undefined,
      },
      "drawers": [
        {
          "ariaLabels": {
            "closeButton": undefined,
            "drawerName": "",
            "triggerButton": undefined,
          },
          "content": undefined,
          "id": "awsui-internal-tools",
          "resizable": false,
          "trigger": {
            "iconName": "status-info",
          },
        },
      ],
      "drawersFocusRef": {
        "current": null,
      },
      "hasNavigation": true,
      "navigationFocusRef": {
        "current": null,
      },
      "navigationOpen": true,
      "onActiveDrawerChange": [Function],
      "onNavigationToggle": [Function],
    },
  },
  "AppLayoutNavigationImplementation" => {
    "appLayoutInternals": {
      "activeAiDrawer": null,
      "activeAiDrawerId": null,
      "activeAiDrawerSize": 0,
      "activeDrawer": undefined,
      "activeDrawerSize": 290,
      "activeGlobalDrawers": [],
      "activeGlobalDrawersIds": [],
      "activeGlobalDrawersSizes": {},
      "aiDrawer": null,
      "aiDrawerFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setFocus": [Function],
      },
      "ariaLabels": {
        "drawers": undefined,
        "drawersOverflow": undefined,
        "drawersOverflowWithBadge": undefined,
        "navigation": undefined,
        "navigationClose": undefined,
        "navigationToggle": undefined,
        "notifications": undefined,
        "tools": undefined,
        "toolsClose": undefined,
        "toolsToggle": undefined,
      },
      "breadcrumbs": undefined,
      "discoveredBreadcrumbs": null,
      "drawers": [
        {
          "ariaLabels": {
            "closeButton": undefined,
            "drawerName": "",
            "triggerButton": undefined,
          },
          "content": undefined,
          "id": "awsui-internal-tools",
          "resizable": false,
          "trigger": {
            "iconName": "status-info",
          },
        },
      ],
      "drawersFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setFocus": [Function],
      },
      "drawersOpenQueue": [],
      "expandedDrawerId": null,
      "globalDrawers": [],
      "globalDrawersFocusControl": {
        "loseFocus": [Function],
        "refs": {},
        "setFocus": [Function],
      },
      "headerVariant": undefined,
      "isMobile": false,
      "maxAiDrawerSize": Infinity,
      "maxDrawerSize": Infinity,
      "maxGlobalDrawersSizes": {},
      "minAiDrawerSize": 400,
      "minDrawerSize": 290,
      "minGlobalDrawersSizes": {},
      "navigation": <React.Fragment />,
      "navigationFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setFocus": [Function],
      },
      "navigationOpen": true,
      "onActiveAiDrawerChange": [Function],
      "onActiveAiDrawerResize": [Function],
      "onActiveDrawerChange": [Function],
      "onActiveDrawerResize": [Function],
      "onActiveGlobalDrawersChange": [Function],
      "onNavigationToggle": [Function],
      "onSplitPanelToggle": [Function],
      "placement": {
        "inlineSize": Infinity,
        "insetBlockEnd": 0,
        "insetBlockStart": 0,
        "insetInlineEnd": 0,
        "insetInlineStart": 0,
      },
      "setExpandedDrawerId": [Function],
      "setNotificationsHeight": [Function],
      "setToolbarHeight": [Function],
      "setToolbarState": [Function],
      "splitPanelAnimationDisabled": true,
      "splitPanelControlId": "split-panel7",
      "splitPanelFocusControl": {
        "refs": {
          "preferences": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setLastInteraction": [Function],
      },
      "splitPanelOpen": false,
      "splitPanelPosition": "bottom",
      "splitPanelToggleConfig": {
        "ariaLabel": undefined,
        "displayed": false,
      },
      "stickyNotifications": false,
      "toolbarState": "show",
      "verticalOffsets": {
        "drawers": 0,
        "header": 0,
        "notifications": 0,
        "toolbar": 0,
      },
    },
    "bottomDrawerReportedSize": 0,
  },
  "AppLayoutSplitPanelDrawerBottomImplementation" => {
    "appLayoutInternals": {
      "activeAiDrawer": null,
      "activeAiDrawerId": null,
      "activeAiDrawerSize": 0,
      "activeDrawer": undefined,
      "activeDrawerSize": 290,
      "activeGlobalDrawers": [],
      "activeGlobalDrawersIds": [],
      "activeGlobalDrawersSizes": {},
      "aiDrawer": null,
      "aiDrawerFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setFocus": [Function],
      },
      "ariaLabels": {
        "drawers": undefined,
        "drawersOverflow": undefined,
        "drawersOverflowWithBadge": undefined,
        "navigation": undefined,
        "navigationClose": undefined,
        "navigationToggle": undefined,
        "notifications": undefined,
        "tools": undefined,
        "toolsClose": undefined,
        "toolsToggle": undefined,
      },
      "breadcrumbs": undefined,
      "discoveredBreadcrumbs": null,
      "drawers": [
        {
          "ariaLabels": {
            "closeButton": undefined,
            "drawerName": "",
            "triggerButton": undefined,
          },
          "content": undefined,
          "id": "awsui-internal-tools",
          "resizable": false,
          "trigger": {
            "iconName": "status-info",
          },
        },
      ],
      "drawersFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setFocus": [Function],
      },
      "drawersOpenQueue": [],
      "expandedDrawerId": null,
      "globalDrawers": [],
      "globalDrawersFocusControl": {
        "loseFocus": [Function],
        "refs": {},
        "setFocus": [Function],
      },
      "headerVariant": undefined,
      "isMobile": false,
      "maxAiDrawerSize": Infinity,
      "maxDrawerSize": Infinity,
      "maxGlobalDrawersSizes": {},
      "minAiDrawerSize": 400,
      "minDrawerSize": 290,
      "minGlobalDrawersSizes": {},
      "navigation": <React.Fragment />,
      "navigationFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setFocus": [Function],
      },
      "navigationOpen": true,
      "onActiveAiDrawerChange": [Function],
      "onActiveAiDrawerResize": [Function],
      "onActiveDrawerChange": [Function],
      "onActiveDrawerResize": [Function],
      "onActiveGlobalDrawersChange": [Function],
      "onNavigationToggle": [Function],
      "onSplitPanelToggle": [Function],
      "placement": {
        "inlineSize": Infinity,
        "insetBlockEnd": 0,
        "insetBlockStart": 0,
        "insetInlineEnd": 0,
        "insetInlineStart": 0,
      },
      "setExpandedDrawerId": [Function],
      "setNotificationsHeight": [Function],
      "setToolbarHeight": [Function],
      "setToolbarState": [Function],
      "splitPanelAnimationDisabled": true,
      "splitPanelControlId": "split-panel7",
      "splitPanelFocusControl": {
        "refs": {
          "preferences": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setLastInteraction": [Function],
      },
      "splitPanelOpen": false,
      "splitPanelPosition": "bottom",
      "splitPanelToggleConfig": {
        "ariaLabel": undefined,
        "displayed": false,
      },
      "stickyNotifications": false,
      "toolbarState": "show",
      "verticalOffsets": {
        "drawers": 0,
        "header": 0,
        "notifications": 0,
        "toolbar": 0,
      },
    },
    "children": <SplitPanel
      closeBehavior="hide"
      header="Split panel header"
    >
      <div>
        split panel content
      </div>
    </SplitPanel>,
    "splitPanelInternals": {
      "bottomOffset": 0,
      "getMaxHeight": [Function],
      "headerHeight": 0,
      "isForcedPosition": false,
      "isOpen": false,
      "leftOffset": 0,
      "maxWidth": Infinity,
      "onPreferencesChange": [Function],
      "onResize": [Function],
      "onToggle": [Function],
      "position": "bottom",
      "refs": {
        "preferences": {
          "current": null,
        },
        "slider": {
          "current": null,
        },
        "toggle": {
          "current": null,
        },
      },
      "reportHeaderHeight": [Function],
      "reportSize": [Function],
      "rightOffset": 0,
      "setSplitPanelToggle": [Function],
      "size": 0,
      "topOffset": 0,
    },
  },
  "AppLayoutDrawerImplementation" => {
    "appLayoutInternals": {
      "activeAiDrawer": null,
      "activeAiDrawerId": null,
      "activeAiDrawerSize": 0,
      "activeDrawer": undefined,
      "activeDrawerSize": 290,
      "activeGlobalDrawers": [],
      "activeGlobalDrawersIds": [],
      "activeGlobalDrawersSizes": {},
      "aiDrawer": null,
      "aiDrawerFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setFocus": [Function],
      },
      "ariaLabels": {
        "drawers": undefined,
        "drawersOverflow": undefined,
        "drawersOverflowWithBadge": undefined,
        "navigation": undefined,
        "navigationClose": undefined,
        "navigationToggle": undefined,
        "notifications": undefined,
        "tools": undefined,
        "toolsClose": undefined,
        "toolsToggle": undefined,
      },
      "breadcrumbs": undefined,
      "discoveredBreadcrumbs": null,
      "drawers": [
        {
          "ariaLabels": {
            "closeButton": undefined,
            "drawerName": "",
            "triggerButton": undefined,
          },
          "content": undefined,
          "id": "awsui-internal-tools",
          "resizable": false,
          "trigger": {
            "iconName": "status-info",
          },
        },
      ],
      "drawersFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setFocus": [Function],
      },
      "drawersOpenQueue": [],
      "expandedDrawerId": null,
      "globalDrawers": [],
      "globalDrawersFocusControl": {
        "loseFocus": [Function],
        "refs": {},
        "setFocus": [Function],
      },
      "headerVariant": undefined,
      "isMobile": false,
      "maxAiDrawerSize": Infinity,
      "maxDrawerSize": Infinity,
      "maxGlobalDrawersSizes": {},
      "minAiDrawerSize": 400,
      "minDrawerSize": 290,
      "minGlobalDrawersSizes": {},
      "navigation": <React.Fragment />,
      "navigationFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setFocus": [Function],
      },
      "navigationOpen": true,
      "onActiveAiDrawerChange": [Function],
      "onActiveAiDrawerResize": [Function],
      "onActiveDrawerChange": [Function],
      "onActiveDrawerResize": [Function],
      "onActiveGlobalDrawersChange": [Function],
      "onNavigationToggle": [Function],
      "onSplitPanelToggle": [Function],
      "placement": {
        "inlineSize": Infinity,
        "insetBlockEnd": 0,
        "insetBlockStart": 0,
        "insetInlineEnd": 0,
        "insetInlineStart": 0,
      },
      "setExpandedDrawerId": [Function],
      "setNotificationsHeight": [Function],
      "setToolbarHeight": [Function],
      "setToolbarState": [Function],
      "splitPanelAnimationDisabled": true,
      "splitPanelControlId": "split-panel7",
      "splitPanelFocusControl": {
        "refs": {
          "preferences": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setLastInteraction": [Function],
      },
      "splitPanelOpen": false,
      "splitPanelPosition": "bottom",
      "splitPanelToggleConfig": {
        "ariaLabel": undefined,
        "displayed": false,
      },
      "stickyNotifications": false,
      "toolbarState": "show",
      "verticalOffsets": {
        "drawers": 0,
        "header": 0,
        "notifications": 0,
        "toolbar": 0,
      },
    },
    "bottomDrawerReportedSize": 0,
  },
  "AppLayoutGlobalDrawersImplementation" => {
    "appLayoutInternals": {
      "activeAiDrawer": null,
      "activeAiDrawerId": null,
      "activeAiDrawerSize": 0,
      "activeDrawer": undefined,
      "activeDrawerSize": 290,
      "activeGlobalDrawers": [],
      "activeGlobalDrawersIds": [],
      "activeGlobalDrawersSizes": {},
      "aiDrawer": null,
      "aiDrawerFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setFocus": [Function],
      },
      "ariaLabels": {
        "drawers": undefined,
        "drawersOverflow": undefined,
        "drawersOverflowWithBadge": undefined,
        "navigation": undefined,
        "navigationClose": undefined,
        "navigationToggle": undefined,
        "notifications": undefined,
        "tools": undefined,
        "toolsClose": undefined,
        "toolsToggle": undefined,
      },
      "breadcrumbs": undefined,
      "discoveredBreadcrumbs": null,
      "drawers": [
        {
          "ariaLabels": {
            "closeButton": undefined,
            "drawerName": "",
            "triggerButton": undefined,
          },
          "content": undefined,
          "id": "awsui-internal-tools",
          "resizable": false,
          "trigger": {
            "iconName": "status-info",
          },
        },
      ],
      "drawersFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setFocus": [Function],
      },
      "drawersOpenQueue": [],
      "expandedDrawerId": null,
      "globalDrawers": [],
      "globalDrawersFocusControl": {
        "loseFocus": [Function],
        "refs": {},
        "setFocus": [Function],
      },
      "headerVariant": undefined,
      "isMobile": false,
      "maxAiDrawerSize": Infinity,
      "maxDrawerSize": Infinity,
      "maxGlobalDrawersSizes": {},
      "minAiDrawerSize": 400,
      "minDrawerSize": 290,
      "minGlobalDrawersSizes": {},
      "navigation": <React.Fragment />,
      "navigationFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setFocus": [Function],
      },
      "navigationOpen": true,
      "onActiveAiDrawerChange": [Function],
      "onActiveAiDrawerResize": [Function],
      "onActiveDrawerChange": [Function],
      "onActiveDrawerResize": [Function],
      "onActiveGlobalDrawersChange": [Function],
      "onNavigationToggle": [Function],
      "onSplitPanelToggle": [Function],
      "placement": {
        "inlineSize": Infinity,
        "insetBlockEnd": 0,
        "insetBlockStart": 0,
        "insetInlineEnd": 0,
        "insetInlineStart": 0,
      },
      "setExpandedDrawerId": [Function],
      "setNotificationsHeight": [Function],
      "setToolbarHeight": [Function],
      "setToolbarState": [Function],
      "splitPanelAnimationDisabled": true,
      "splitPanelControlId": "split-panel7",
      "splitPanelFocusControl": {
        "refs": {
          "preferences": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setLastInteraction": [Function],
      },
      "splitPanelOpen": false,
      "splitPanelPosition": "bottom",
      "splitPanelToggleConfig": {
        "ariaLabel": undefined,
        "displayed": false,
      },
      "stickyNotifications": false,
      "toolbarState": "show",
      "verticalOffsets": {
        "drawers": 0,
        "header": 0,
        "notifications": 0,
        "toolbar": 0,
      },
    },
  },
}
`;

exports[`Theme=refresh-toolbar, Size=desktop contract with split panel 1`] = `
Map {
  "AppLayoutToolbarImplementation" => {
    "appLayoutInternals": {
      "activeAiDrawer": null,
      "activeAiDrawerId": null,
      "activeAiDrawerSize": 0,
      "activeDrawer": undefined,
      "activeDrawerSize": 290,
      "activeGlobalDrawers": [],
      "activeGlobalDrawersIds": [],
      "activeGlobalDrawersSizes": {},
      "aiDrawer": null,
      "aiDrawerFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setFocus": [Function],
      },
      "ariaLabels": {
        "drawers": undefined,
        "drawersOverflow": undefined,
        "drawersOverflowWithBadge": undefined,
        "navigation": undefined,
        "navigationClose": undefined,
        "navigationToggle": undefined,
        "notifications": undefined,
        "tools": undefined,
        "toolsClose": undefined,
        "toolsToggle": undefined,
      },
      "breadcrumbs": undefined,
      "discoveredBreadcrumbs": null,
      "drawers": [
        {
          "ariaLabels": {
            "closeButton": undefined,
            "drawerName": "",
            "triggerButton": undefined,
          },
          "content": undefined,
          "id": "awsui-internal-tools",
          "resizable": false,
          "trigger": {
            "iconName": "status-info",
          },
        },
      ],
      "drawersFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setFocus": [Function],
      },
      "drawersOpenQueue": [],
      "expandedDrawerId": null,
      "globalDrawers": [],
      "globalDrawersFocusControl": {
        "loseFocus": [Function],
        "refs": {},
        "setFocus": [Function],
      },
      "headerVariant": undefined,
      "isMobile": false,
      "maxAiDrawerSize": Infinity,
      "maxDrawerSize": Infinity,
      "maxGlobalDrawersSizes": {},
      "minAiDrawerSize": 400,
      "minDrawerSize": 290,
      "minGlobalDrawersSizes": {},
      "navigation": <React.Fragment />,
      "navigationFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setFocus": [Function],
      },
      "navigationOpen": true,
      "onActiveAiDrawerChange": [Function],
      "onActiveAiDrawerResize": [Function],
      "onActiveDrawerChange": [Function],
      "onActiveDrawerResize": [Function],
      "onActiveGlobalDrawersChange": [Function],
      "onNavigationToggle": [Function],
      "onSplitPanelToggle": [Function],
      "placement": {
        "inlineSize": Infinity,
        "insetBlockEnd": 0,
        "insetBlockStart": 0,
        "insetInlineEnd": 0,
        "insetInlineStart": 0,
      },
      "setExpandedDrawerId": [Function],
      "setNotificationsHeight": [Function],
      "setToolbarHeight": [Function],
      "setToolbarState": [Function],
      "splitPanelAnimationDisabled": true,
      "splitPanelControlId": "split-panel4",
      "splitPanelFocusControl": {
        "refs": {
          "preferences": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setLastInteraction": [Function],
      },
      "splitPanelOpen": false,
      "splitPanelPosition": "bottom",
      "splitPanelToggleConfig": {
        "ariaLabel": undefined,
        "displayed": false,
      },
      "stickyNotifications": false,
      "toolbarState": "show",
      "verticalOffsets": {
        "drawers": 0,
        "header": 0,
        "notifications": 0,
        "toolbar": 0,
      },
    },
    "featureNotificationsProps": {
      "drawer": null,
      "renderLatestFeaturePrompt": [Function],
    },
    "toolbarProps": {
      "activeDrawerId": null,
      "ariaLabels": {
        "drawers": undefined,
        "drawersOverflow": undefined,
        "drawersOverflowWithBadge": undefined,
        "navigation": undefined,
        "navigationClose": undefined,
        "navigationToggle": undefined,
        "notifications": undefined,
        "tools": undefined,
        "toolsClose": undefined,
        "toolsToggle": undefined,
      },
      "drawers": [
        {
          "ariaLabels": {
            "closeButton": undefined,
            "drawerName": "",
            "triggerButton": undefined,
          },
          "content": undefined,
          "id": "awsui-internal-tools",
          "resizable": false,
          "trigger": {
            "iconName": "status-info",
          },
        },
      ],
      "drawersFocusRef": {
        "current": null,
      },
      "hasNavigation": true,
      "navigationFocusRef": {
        "current": null,
      },
      "navigationOpen": true,
      "onActiveDrawerChange": [Function],
      "onNavigationToggle": [Function],
    },
  },
  "AppLayoutNavigationImplementation" => {
    "appLayoutInternals": {
      "activeAiDrawer": null,
      "activeAiDrawerId": null,
      "activeAiDrawerSize": 0,
      "activeDrawer": undefined,
      "activeDrawerSize": 290,
      "activeGlobalDrawers": [],
      "activeGlobalDrawersIds": [],
      "activeGlobalDrawersSizes": {},
      "aiDrawer": null,
      "aiDrawerFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setFocus": [Function],
      },
      "ariaLabels": {
        "drawers": undefined,
        "drawersOverflow": undefined,
        "drawersOverflowWithBadge": undefined,
        "navigation": undefined,
        "navigationClose": undefined,
        "navigationToggle": undefined,
        "notifications": undefined,
        "tools": undefined,
        "toolsClose": undefined,
        "toolsToggle": undefined,
      },
      "breadcrumbs": undefined,
      "discoveredBreadcrumbs": null,
      "drawers": [
        {
          "ariaLabels": {
            "closeButton": undefined,
            "drawerName": "",
            "triggerButton": undefined,
          },
          "content": undefined,
          "id": "awsui-internal-tools",
          "resizable": false,
          "trigger": {
            "iconName": "status-info",
          },
        },
      ],
      "drawersFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setFocus": [Function],
      },
      "drawersOpenQueue": [],
      "expandedDrawerId": null,
      "globalDrawers": [],
      "globalDrawersFocusControl": {
        "loseFocus": [Function],
        "refs": {},
        "setFocus": [Function],
      },
      "headerVariant": undefined,
      "isMobile": false,
      "maxAiDrawerSize": Infinity,
      "maxDrawerSize": Infinity,
      "maxGlobalDrawersSizes": {},
      "minAiDrawerSize": 400,
      "minDrawerSize": 290,
      "minGlobalDrawersSizes": {},
      "navigation": <React.Fragment />,
      "navigationFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setFocus": [Function],
      },
      "navigationOpen": true,
      "onActiveAiDrawerChange": [Function],
      "onActiveAiDrawerResize": [Function],
      "onActiveDrawerChange": [Function],
      "onActiveDrawerResize": [Function],
      "onActiveGlobalDrawersChange": [Function],
      "onNavigationToggle": [Function],
      "onSplitPanelToggle": [Function],
      "placement": {
        "inlineSize": Infinity,
        "insetBlockEnd": 0,
        "insetBlockStart": 0,
        "insetInlineEnd": 0,
        "insetInlineStart": 0,
      },
      "setExpandedDrawerId": [Function],
      "setNotificationsHeight": [Function],
      "setToolbarHeight": [Function],
      "setToolbarState": [Function],
      "splitPanelAnimationDisabled": true,
      "splitPanelControlId": "split-panel4",
      "splitPanelFocusControl": {
        "refs": {
          "preferences": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setLastInteraction": [Function],
      },
      "splitPanelOpen": false,
      "splitPanelPosition": "bottom",
      "splitPanelToggleConfig": {
        "ariaLabel": undefined,
        "displayed": false,
      },
      "stickyNotifications": false,
      "toolbarState": "show",
      "verticalOffsets": {
        "drawers": 0,
        "header": 0,
        "notifications": 0,
        "toolbar": 0,
      },
    },
    "bottomDrawerReportedSize": 0,
  },
  "AppLayoutSplitPanelDrawerBottomImplementation" => {
    "appLayoutInternals": {
      "activeAiDrawer": null,
      "activeAiDrawerId": null,
      "activeAiDrawerSize": 0,
      "activeDrawer": undefined,
      "activeDrawerSize": 290,
      "activeGlobalDrawers": [],
      "activeGlobalDrawersIds": [],
      "activeGlobalDrawersSizes": {},
      "aiDrawer": null,
      "aiDrawerFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setFocus": [Function],
      },
      "ariaLabels": {
        "drawers": undefined,
        "drawersOverflow": undefined,
        "drawersOverflowWithBadge": undefined,
        "navigation": undefined,
        "navigationClose": undefined,
        "navigationToggle": undefined,
        "notifications": undefined,
        "tools": undefined,
        "toolsClose": undefined,
        "toolsToggle": undefined,
      },
      "breadcrumbs": undefined,
      "discoveredBreadcrumbs": null,
      "drawers": [
        {
          "ariaLabels": {
            "closeButton": undefined,
            "drawerName": "",
            "triggerButton": undefined,
          },
          "content": undefined,
          "id": "awsui-internal-tools",
          "resizable": false,
          "trigger": {
            "iconName": "status-info",
          },
        },
      ],
      "drawersFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setFocus": [Function],
      },
      "drawersOpenQueue": [],
      "expandedDrawerId": null,
      "globalDrawers": [],
      "globalDrawersFocusControl": {
        "loseFocus": [Function],
        "refs": {},
        "setFocus": [Function],
      },
      "headerVariant": undefined,
      "isMobile": false,
      "maxAiDrawerSize": Infinity,
      "maxDrawerSize": Infinity,
      "maxGlobalDrawersSizes": {},
      "minAiDrawerSize": 400,
      "minDrawerSize": 290,
      "minGlobalDrawersSizes": {},
      "navigation": <React.Fragment />,
      "navigationFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setFocus": [Function],
      },
      "navigationOpen": true,
      "onActiveAiDrawerChange": [Function],
      "onActiveAiDrawerResize": [Function],
      "onActiveDrawerChange": [Function],
      "onActiveDrawerResize": [Function],
      "onActiveGlobalDrawersChange": [Function],
      "onNavigationToggle": [Function],
      "onSplitPanelToggle": [Function],
      "placement": {
        "inlineSize": Infinity,
        "insetBlockEnd": 0,
        "insetBlockStart": 0,
        "insetInlineEnd": 0,
        "insetInlineStart": 0,
      },
      "setExpandedDrawerId": [Function],
      "setNotificationsHeight": [Function],
      "setToolbarHeight": [Function],
      "setToolbarState": [Function],
      "splitPanelAnimationDisabled": true,
      "splitPanelControlId": "split-panel4",
      "splitPanelFocusControl": {
        "refs": {
          "preferences": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setLastInteraction": [Function],
      },
      "splitPanelOpen": false,
      "splitPanelPosition": "bottom",
      "splitPanelToggleConfig": {
        "ariaLabel": undefined,
        "displayed": false,
      },
      "stickyNotifications": false,
      "toolbarState": "show",
      "verticalOffsets": {
        "drawers": 0,
        "header": 0,
        "notifications": 0,
        "toolbar": 0,
      },
    },
    "children": <SplitPanel
      header="Split panel header"
    >
      <div>
        split panel content
      </div>
    </SplitPanel>,
    "splitPanelInternals": {
      "bottomOffset": 0,
      "getMaxHeight": [Function],
      "headerHeight": 0,
      "isForcedPosition": false,
      "isOpen": false,
      "leftOffset": 0,
      "maxWidth": Infinity,
      "onPreferencesChange": [Function],
      "onResize": [Function],
      "onToggle": [Function],
      "position": "bottom",
      "refs": {
        "preferences": {
          "current": null,
        },
        "slider": {
          "current": null,
        },
        "toggle": {
          "current": null,
        },
      },
      "reportHeaderHeight": [Function],
      "reportSize": [Function],
      "rightOffset": 0,
      "setSplitPanelToggle": [Function],
      "size": 0,
      "topOffset": 0,
    },
  },
  "AppLayoutDrawerImplementation" => {
    "appLayoutInternals": {
      "activeAiDrawer": null,
      "activeAiDrawerId": null,
      "activeAiDrawerSize": 0,
      "activeDrawer": undefined,
      "activeDrawerSize": 290,
      "activeGlobalDrawers": [],
      "activeGlobalDrawersIds": [],
      "activeGlobalDrawersSizes": {},
      "aiDrawer": null,
      "aiDrawerFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setFocus": [Function],
      },
      "ariaLabels": {
        "drawers": undefined,
        "drawersOverflow": undefined,
        "drawersOverflowWithBadge": undefined,
        "navigation": undefined,
        "navigationClose": undefined,
        "navigationToggle": undefined,
        "notifications": undefined,
        "tools": undefined,
        "toolsClose": undefined,
        "toolsToggle": undefined,
      },
      "breadcrumbs": undefined,
      "discoveredBreadcrumbs": null,
      "drawers": [
        {
          "ariaLabels": {
            "closeButton": undefined,
            "drawerName": "",
            "triggerButton": undefined,
          },
          "content": undefined,
          "id": "awsui-internal-tools",
          "resizable": false,
          "trigger": {
            "iconName": "status-info",
          },
        },
      ],
      "drawersFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setFocus": [Function],
      },
      "drawersOpenQueue": [],
      "expandedDrawerId": null,
      "globalDrawers": [],
      "globalDrawersFocusControl": {
        "loseFocus": [Function],
        "refs": {},
        "setFocus": [Function],
      },
      "headerVariant": undefined,
      "isMobile": false,
      "maxAiDrawerSize": Infinity,
      "maxDrawerSize": Infinity,
      "maxGlobalDrawersSizes": {},
      "minAiDrawerSize": 400,
      "minDrawerSize": 290,
      "minGlobalDrawersSizes": {},
      "navigation": <React.Fragment />,
      "navigationFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setFocus": [Function],
      },
      "navigationOpen": true,
      "onActiveAiDrawerChange": [Function],
      "onActiveAiDrawerResize": [Function],
      "onActiveDrawerChange": [Function],
      "onActiveDrawerResize": [Function],
      "onActiveGlobalDrawersChange": [Function],
      "onNavigationToggle": [Function],
      "onSplitPanelToggle": [Function],
      "placement": {
        "inlineSize": Infinity,
        "insetBlockEnd": 0,
        "insetBlockStart": 0,
        "insetInlineEnd": 0,
        "insetInlineStart": 0,
      },
      "setExpandedDrawerId": [Function],
      "setNotificationsHeight": [Function],
      "setToolbarHeight": [Function],
      "setToolbarState": [Function],
      "splitPanelAnimationDisabled": true,
      "splitPanelControlId": "split-panel4",
      "splitPanelFocusControl": {
        "refs": {
          "preferences": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setLastInteraction": [Function],
      },
      "splitPanelOpen": false,
      "splitPanelPosition": "bottom",
      "splitPanelToggleConfig": {
        "ariaLabel": undefined,
        "displayed": false,
      },
      "stickyNotifications": false,
      "toolbarState": "show",
      "verticalOffsets": {
        "drawers": 0,
        "header": 0,
        "notifications": 0,
        "toolbar": 0,
      },
    },
    "bottomDrawerReportedSize": 0,
  },
  "AppLayoutGlobalDrawersImplementation" => {
    "appLayoutInternals": {
      "activeAiDrawer": null,
      "activeAiDrawerId": null,
      "activeAiDrawerSize": 0,
      "activeDrawer": undefined,
      "activeDrawerSize": 290,
      "activeGlobalDrawers": [],
      "activeGlobalDrawersIds": [],
      "activeGlobalDrawersSizes": {},
      "aiDrawer": null,
      "aiDrawerFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setFocus": [Function],
      },
      "ariaLabels": {
        "drawers": undefined,
        "drawersOverflow": undefined,
        "drawersOverflowWithBadge": undefined,
        "navigation": undefined,
        "navigationClose": undefined,
        "navigationToggle": undefined,
        "notifications": undefined,
        "tools": undefined,
        "toolsClose": undefined,
        "toolsToggle": undefined,
      },
      "breadcrumbs": undefined,
      "discoveredBreadcrumbs": null,
      "drawers": [
        {
          "ariaLabels": {
            "closeButton": undefined,
            "drawerName": "",
            "triggerButton": undefined,
          },
          "content": undefined,
          "id": "awsui-internal-tools",
          "resizable": false,
          "trigger": {
            "iconName": "status-info",
          },
        },
      ],
      "drawersFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setFocus": [Function],
      },
      "drawersOpenQueue": [],
      "expandedDrawerId": null,
      "globalDrawers": [],
      "globalDrawersFocusControl": {
        "loseFocus": [Function],
        "refs": {},
        "setFocus": [Function],
      },
      "headerVariant": undefined,
      "isMobile": false,
      "maxAiDrawerSize": Infinity,
      "maxDrawerSize": Infinity,
      "maxGlobalDrawersSizes": {},
      "minAiDrawerSize": 400,
      "minDrawerSize": 290,
      "minGlobalDrawersSizes": {},
      "navigation": <React.Fragment />,
      "navigationFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setFocus": [Function],
      },
      "navigationOpen": true,
      "onActiveAiDrawerChange": [Function],
      "onActiveAiDrawerResize": [Function],
      "onActiveDrawerChange": [Function],
      "onActiveDrawerResize": [Function],
      "onActiveGlobalDrawersChange": [Function],
      "onNavigationToggle": [Function],
      "onSplitPanelToggle": [Function],
      "placement": {
        "inlineSize": Infinity,
        "insetBlockEnd": 0,
        "insetBlockStart": 0,
        "insetInlineEnd": 0,
        "insetInlineStart": 0,
      },
      "setExpandedDrawerId": [Function],
      "setNotificationsHeight": [Function],
      "setToolbarHeight": [Function],
      "setToolbarState": [Function],
      "splitPanelAnimationDisabled": true,
      "splitPanelControlId": "split-panel4",
      "splitPanelFocusControl": {
        "refs": {
          "preferences": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setLastInteraction": [Function],
      },
      "splitPanelOpen": false,
      "splitPanelPosition": "bottom",
      "splitPanelToggleConfig": {
        "ariaLabel": undefined,
        "displayed": false,
      },
      "stickyNotifications": false,
      "toolbarState": "show",
      "verticalOffsets": {
        "drawers": 0,
        "header": 0,
        "notifications": 0,
        "toolbar": 0,
      },
    },
  },
}
`;
